renamed vertretungsplan to substitutionplan

--- a/Javadocs/allclasses-frame.html
+++ b/Javadocs/allclasses-frame.html
@@ -116,10 +116,10 @@
                title="class in com.asdoi.gymwen.ui.fragments"
                target="classFrame">VertretungFragment</a></li>
         <li><a href="com/asdoi/gymwen/vertretungsplan/Vertretungsplan.html"
-               title="class in com.asdoi.gymwen.vertretungsplan"
+               title="class in com.asdoi.gymwen.substitutionplan"
                target="classFrame">Vertretungsplan</a></li>
         <li><a href="com/asdoi/gymwen/vertretungsplan/VertretungsPlanFeatures.html"
-               title="class in com.asdoi.gymwen.vertretungsplan" target="classFrame">VertretungsPlanFeatures</a>
+               title="class in com.asdoi.gymwen.substitutionplan" target="classFrame">VertretungsPlanFeatures</a>
         </li>
         <li><a href="com/asdoi/gymwen/widgets/VertretungWidgetProvider.html"
                title="class in com.asdoi.gymwen.widgets" target="classFrame">VertretungWidgetProvider</a>
