--- a/Javadocs/allclasses-noframe.html
+++ b/Javadocs/allclasses-noframe.html
@@ -95,9 +95,9 @@
         <li><a href="com/asdoi/gymwen/ui/fragments/VertretungFragment.html"
                title="class in com.asdoi.gymwen.ui.fragments">VertretungFragment</a></li>
         <li><a href="com/asdoi/gymwen/vertretungsplan/Vertretungsplan.html"
-               title="class in com.asdoi.gymwen.vertretungsplan">Vertretungsplan</a></li>
+               title="class in com.asdoi.gymwen.substitutionplan">Vertretungsplan</a></li>
         <li><a href="com/asdoi/gymwen/vertretungsplan/VertretungsPlanFeatures.html"
-               title="class in com.asdoi.gymwen.vertretungsplan">VertretungsPlanFeatures</a></li>
+               title="class in com.asdoi.gymwen.substitutionplan">VertretungsPlanFeatures</a></li>
         <li><a href="com/asdoi/gymwen/widgets/VertretungWidgetProvider.html"
                title="class in com.asdoi.gymwen.widgets">VertretungWidgetProvider</a></li>
         <li><a href="com/asdoi/gymwen/ui/activities/WebsiteActivity.html"
