--- a/Javadocs/com/asdoi/gymwen/vertretungsplan/Vertretungsplan.html
+++ b/Javadocs/com/asdoi/gymwen/vertretungsplan/Vertretungsplan.html
@@ -53,7 +53,7 @@ var activeTableTab = "activeTableTab";
     <ul class="navList">
         <li>Prev&nbsp;Class</li>
         <li><a href="../../../../com/asdoi/gymwen/vertretungsplan/VertretungsPlanFeatures.html"
-               title="class in com.asdoi.gymwen.vertretungsplan"><span class="typeNameLink">Next&nbsp;Class</span></a>
+               title="class in com.asdoi.gymwen.substitutionplan"><span class="typeNameLink">Next&nbsp;Class</span></a>
         </li>
     </ul>
     <ul class="navList">
@@ -98,7 +98,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-    <div class="subTitle">com.asdoi.gymwen.vertretungsplan</div>
+    <div class="subTitle">com.asdoi.gymwen.substitutionplan</div>
     <h2 title="Class Vertretungsplan" class="title">Class Vertretungsplan</h2>
 </div>
 <div class="contentContainer">
@@ -106,7 +106,7 @@ var activeTableTab = "activeTableTab";
         <li>java.lang.Object</li>
         <li>
             <ul class="inheritance">
-                <li>com.asdoi.gymwen.vertretungsplan.Vertretungsplan</li>
+                <li>com.asdoi.gymwen.substitutionplan.SubstitutionPlan</li>
             </ul>
         </li>
     </ul>
@@ -589,7 +589,7 @@ extends java.lang.Object</pre>
     <ul class="navList">
         <li>Prev&nbsp;Class</li>
         <li><a href="../../../../com/asdoi/gymwen/vertretungsplan/VertretungsPlanFeatures.html"
-               title="class in com.asdoi.gymwen.vertretungsplan"><span class="typeNameLink">Next&nbsp;Class</span></a>
+               title="class in com.asdoi.gymwen.substitutionplan"><span class="typeNameLink">Next&nbsp;Class</span></a>
         </li>
     </ul>
     <ul class="navList">
