--- a/Javadocs/constant-values.html
+++ b/Javadocs/constant-values.html
@@ -274,7 +274,7 @@
                 <tbody>
                 <tr class="altColor">
                     <td class="colFirst"><a
-                            name="com.asdoi.gymwen.ui.fragments.VertretungFragment.Instance_Both">
+                            name="com.asdoi.gymwen.ui.fragments.SubstitutionFragment.Instance_Both">
                         <!--   -->
                     </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
                     <td><code><a
@@ -284,7 +284,7 @@
                 </tr>
                 <tr class="rowColor">
                     <td class="colFirst"><a
-                            name="com.asdoi.gymwen.ui.fragments.VertretungFragment.Instance_Today">
+                            name="com.asdoi.gymwen.ui.fragments.SubstitutionFragment.Instance_Today">
                         <!--   -->
                     </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
                     <td><code><a
@@ -294,7 +294,7 @@
                 </tr>
                 <tr class="altColor">
                     <td class="colFirst"><a
-                            name="com.asdoi.gymwen.ui.fragments.VertretungFragment.Instance_Today_All">
+                            name="com.asdoi.gymwen.ui.fragments.SubstitutionFragment.Instance_Today_All">
                         <!--   -->
                     </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
                     <td><code><a
@@ -304,7 +304,7 @@
                 </tr>
                 <tr class="rowColor">
                     <td class="colFirst"><a
-                            name="com.asdoi.gymwen.ui.fragments.VertretungFragment.Instance_Tomorrow">
+                            name="com.asdoi.gymwen.ui.fragments.SubstitutionFragment.Instance_Tomorrow">
                         <!--   -->
                     </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
                     <td><code><a
@@ -314,7 +314,7 @@
                 </tr>
                 <tr class="altColor">
                     <td class="colFirst"><a
-                            name="com.asdoi.gymwen.ui.fragments.VertretungFragment.Instance_Tomorrow_All">
+                            name="com.asdoi.gymwen.ui.fragments.SubstitutionFragment.Instance_Tomorrow_All">
                         <!--   -->
                     </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
                     <td><code><a
@@ -510,7 +510,7 @@
                 <tbody>
                 <tr class="altColor">
                     <td class="colFirst"><a
-                            name="com.asdoi.gymwen.widgets.VertretungWidgetProvider.WIDGET_ID_KEY">
+                            name="com.asdoi.gymwen.widgets.SubstitutionWidgetProvider.WIDGET_ID_KEY">
                         <!--   -->
                     </a><code>public&nbsp;static&nbsp;final&nbsp;java.lang.String</code></td>
                     <td><code><a
