--- a/Javadocs/overview-frame.html
+++ b/Javadocs/overview-frame.html
@@ -33,7 +33,7 @@
                target="packageFrame">com.asdoi.gymwen.ui.settingsFragments</a></li>
         <li><a href="com/asdoi/gymwen/util/package-frame.html" target="packageFrame">com.asdoi.gymwen.util</a>
         </li>
-        <li><a href="com/asdoi/gymwen/vertretungsplan/package-frame.html" target="packageFrame">com.asdoi.gymwen.vertretungsplan</a>
+        <li><a href="com/asdoi/gymwen/vertretungsplan/package-frame.html" target="packageFrame">com.asdoi.gymwen.substitutionplan</a>
         </li>
         <li><a href="com/asdoi/gymwen/widgets/package-frame.html" target="packageFrame">com.asdoi.gymwen.widgets</a>
         </li>
