--- a/Javadocs/overview-tree.html
+++ b/Javadocs/overview-tree.html
@@ -94,7 +94,7 @@
         <li><a href="com/asdoi/gymwen/ui/settingsFragments/package-tree.html">com.asdoi.gymwen.ui.settingsFragments</a>,
         </li>
         <li><a href="com/asdoi/gymwen/util/package-tree.html">com.asdoi.gymwen.util</a>,</li>
-        <li><a href="com/asdoi/gymwen/vertretungsplan/package-tree.html">com.asdoi.gymwen.vertretungsplan</a>,
+        <li><a href="com/asdoi/gymwen/vertretungsplan/package-tree.html">com.asdoi.gymwen.substitutionplan</a>,
         </li>
         <li><a href="com/asdoi/gymwen/widgets/package-tree.html">com.asdoi.gymwen.widgets</a></li>
     </ul>
@@ -448,11 +448,11 @@
                 </li>
                 <li type="circle">com.asdoi.gymwen.vertretungsplan.<a
                         href="com/asdoi/gymwen/vertretungsplan/Vertretungsplan.html"
-                        title="class in com.asdoi.gymwen.vertretungsplan"><span
+                        title="class in com.asdoi.gymwen.substitutionplan"><span
                         class="typeNameLink">Vertretungsplan</span></a></li>
                 <li type="circle">com.asdoi.gymwen.vertretungsplan.<a
                         href="com/asdoi/gymwen/vertretungsplan/VertretungsPlanFeatures.html"
-                        title="class in com.asdoi.gymwen.vertretungsplan"><span
+                        title="class in com.asdoi.gymwen.substitutionplan"><span
                         class="typeNameLink">VertretungsPlanFeatures</span></a></li>
             </ul>
         </li>
