--- a/Javadocs/overview-summary.html
+++ b/Javadocs/overview-summary.html
@@ -128,7 +128,7 @@
             <td class="colLast">&nbsp;</td>
         </tr>
         <tr class="rowColor">
-            <td class="colFirst"><a href="com/asdoi/gymwen/vertretungsplan/package-summary.html">com.asdoi.gymwen.vertretungsplan</a>
+            <td class="colFirst"><a href="com/asdoi/gymwen/vertretungsplan/package-summary.html">com.asdoi.gymwen.substitutionplan</a>
             </td>
             <td class="colLast">&nbsp;</td>
         </tr>
