renamed vertretung to substitution

--- a/Javadocs/allclasses-frame.html
+++ b/Javadocs/allclasses-frame.html
@@ -58,7 +58,7 @@
                title="class in com.asdoi.gymwen.ui.activities"
                target="classFrame">ImportActivity</a></li>
         <li><a href="com/asdoi/gymwen/lehrerliste/Lehrerliste.html"
-               title="class in com.asdoi.gymwen.lehrerliste" target="classFrame">Lehrerliste</a>
+               title="class in com.asdoi.gymwen.teacherlist" target="classFrame">Lehrerliste</a>
         </li>
         <li><a href="com/asdoi/gymwen/ui/fragments/LehrerlisteFragment.html"
                title="class in com.asdoi.gymwen.ui.fragments" target="classFrame">LehrerlisteFragment</a>
