--- a/Javadocs/allclasses-noframe.html
+++ b/Javadocs/allclasses-noframe.html
@@ -48,7 +48,7 @@
         <li><a href="com/asdoi/gymwen/ui/activities/ImportActivity.html"
                title="class in com.asdoi.gymwen.ui.activities">ImportActivity</a></li>
         <li><a href="com/asdoi/gymwen/lehrerliste/Lehrerliste.html"
-               title="class in com.asdoi.gymwen.lehrerliste">Lehrerliste</a></li>
+               title="class in com.asdoi.gymwen.teacherlist">Lehrerliste</a></li>
         <li><a href="com/asdoi/gymwen/ui/fragments/LehrerlisteFragment.html"
                title="class in com.asdoi.gymwen.ui.fragments">LehrerlisteFragment</a></li>
         <li><a href="com/asdoi/gymwen/ui/activities/MainActivity.html"
