--- a/Javadocs/index-files/index-15.html
+++ b/Javadocs/index-files/index-15.html
@@ -114,7 +114,7 @@
                 href="../com/asdoi/gymwen/lehrerliste/Lehrerliste.html#reloadDoc--">reloadDoc()</a></span>
             - Static method in class com.asdoi.gymwen.lehrerliste.<a
                     href="../com/asdoi/gymwen/lehrerliste/Lehrerliste.html"
-                    title="class in com.asdoi.gymwen.lehrerliste">Lehrerliste</a></dt>
+                    title="class in com.asdoi.gymwen.teacherlist">Lehrerliste</a></dt>
         <dd>
             <div class="block">reloads the docs from sharedPreferences</div>
         </dd>
