--- a/Javadocs/index-files/index-3.html
+++ b/Javadocs/index-files/index-3.html
@@ -214,7 +214,7 @@
             com.asdoi.gymwen
         </dt>
         <dd>&nbsp;</dd>
-        <dt><a href="../com/asdoi/gymwen/lehrerliste/package-summary.html">com.asdoi.gymwen.lehrerliste</a>
+        <dt><a href="../com/asdoi/gymwen/lehrerliste/package-summary.html">com.asdoi.gymwen.teacherlist</a>
             - package com.asdoi.gymwen.lehrerliste
         </dt>
         <dd>&nbsp;</dd>
