--- a/Javadocs/overview-frame.html
+++ b/Javadocs/overview-frame.html
@@ -17,7 +17,7 @@
     <ul title="Packages">
         <li><a href="com/asdoi/gymwen/package-frame.html" target="packageFrame">com.asdoi.gymwen</a>
         </li>
-        <li><a href="com/asdoi/gymwen/lehrerliste/package-frame.html" target="packageFrame">com.asdoi.gymwen.lehrerliste</a>
+        <li><a href="com/asdoi/gymwen/lehrerliste/package-frame.html" target="packageFrame">com.asdoi.gymwen.teacherlist</a>
         </li>
         <li><a href="com/asdoi/gymwen/profiles/package-frame.html" target="packageFrame">com.asdoi.gymwen.profiles</a>
         </li>
