--- a/Javadocs/overview-summary.html
+++ b/Javadocs/overview-summary.html
@@ -87,7 +87,7 @@
             <td class="colLast">&nbsp;</td>
         </tr>
         <tr class="rowColor">
-            <td class="colFirst"><a href="com/asdoi/gymwen/lehrerliste/package-summary.html">com.asdoi.gymwen.lehrerliste</a>
+            <td class="colFirst"><a href="com/asdoi/gymwen/lehrerliste/package-summary.html">com.asdoi.gymwen.teacherlist</a>
             </td>
             <td class="colLast">&nbsp;</td>
         </tr>
