--- a/Javadocs/overview-tree.html
+++ b/Javadocs/overview-tree.html
@@ -78,7 +78,7 @@
     <ul class="horizontal">
         <li><a href="com/asdoi/gymwen/package-tree.html">com.asdoi.gymwen</a>,</li>
         <li>
-            <a href="com/asdoi/gymwen/lehrerliste/package-tree.html">com.asdoi.gymwen.lehrerliste</a>,
+            <a href="com/asdoi/gymwen/lehrerliste/package-tree.html">com.asdoi.gymwen.teacherlist</a>,
         </li>
         <li><a href="com/asdoi/gymwen/profiles/package-tree.html">com.asdoi.gymwen.profiles</a>,
         </li>
@@ -419,7 +419,7 @@
                 </li>
                 <li type="circle">com.asdoi.gymwen.lehrerliste.<a
                         href="com/asdoi/gymwen/lehrerliste/Lehrerliste.html"
-                        title="class in com.asdoi.gymwen.lehrerliste"><span class="typeNameLink">Lehrerliste</span></a>
+                        title="class in com.asdoi.gymwen.teacherlist"><span class="typeNameLink">Lehrerliste</span></a>
                 </li>
                 <li type="circle">androidx.viewpager.widget.PagerAdapter
                     <ul>
