--- a/Javadocs/com/asdoi/gymwen/lehrerliste/Lehrerliste.html
+++ b/Javadocs/com/asdoi/gymwen/lehrerliste/Lehrerliste.html
@@ -96,7 +96,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-    <div class="subTitle">com.asdoi.gymwen.lehrerliste</div>
+    <div class="subTitle">com.asdoi.gymwen.teacherlist</div>
     <h2 title="Class Lehrerliste" class="title">Class Lehrerliste</h2>
 </div>
 <div class="contentContainer">
@@ -104,7 +104,7 @@ var activeTableTab = "activeTableTab";
         <li>java.lang.Object</li>
         <li>
             <ul class="inheritance">
-                <li>com.asdoi.gymwen.lehrerliste.Lehrerliste</li>
+                <li>com.asdoi.gymwen.teacherlist.Teacherlist</li>
             </ul>
         </li>
     </ul>
