added parts of main notification

--- a/Javadocs/com/asdoi/gymwen/ApplicationFeatures.createInfoNotification.html
+++ b/Javadocs/com/asdoi/gymwen/ApplicationFeatures.createInfoNotification.html
@@ -118,11 +118,11 @@ var activeTableTab = "activeTableTab";
                     <ul class="inheritance">
                         <li>
                             <a href="../../../com/asdoi/gymwen/ApplicationFeatures.downloadSubstitutionplanDocsTask.html"
-                               title="class in com.asdoi.gymwen">com.asdoi.gymwen.ApplicationFeatures.downloadSubstitutionplanDocsTask</a>
+                               title="class in com.asdoi.gymwen">com.asdoi.gymwen.ApplicationFeatures.DownloadSubstitutionplanDocsTask</a>
                         </li>
                         <li>
                             <ul class="inheritance">
-                                <li>com.asdoi.gymwen.ApplicationFeatures.createInfoNotification</li>
+                                <li>com.asdoi.gymwen.ApplicationFeatures.CreateInfoNotification</li>
                             </ul>
                         </li>
                     </ul>
@@ -247,7 +247,7 @@ extends <a href="../../../com/asdoi/gymwen/ApplicationFeatures.downloadSubstitut
                         </table>
                         <ul class="blockList">
                             <li class="blockList"><a
-                                    name="methods.inherited.from.class.com.asdoi.gymwen.ApplicationFeatures.downloadSubstitutionplanDocsTask">
+                                    name="methods.inherited.from.class.com.asdoi.gymwen.ApplicationFeatures.DownloadSubstitutionplanDocsTask">
                                 <!--   -->
                             </a>
                                 <h3>Methods inherited from class&nbsp;com.asdoi.gymwen.<a
