--- a/Javadocs/com/asdoi/gymwen/ApplicationFeatures.downloadImageTask.html
+++ b/Javadocs/com/asdoi/gymwen/ApplicationFeatures.downloadImageTask.html
@@ -117,7 +117,7 @@ var activeTableTab = "activeTableTab";
                 <li>android.os.AsyncTask&lt;java.lang.String,java.lang.Void,android.graphics.Bitmap&gt;</li>
                 <li>
                     <ul class="inheritance">
-                        <li>com.asdoi.gymwen.ApplicationFeatures.downloadImageTask</li>
+                        <li>com.asdoi.gymwen.ApplicationFeatures.DownloadImageTask</li>
                     </ul>
                 </li>
             </ul>
