--- a/Javadocs/com/asdoi/gymwen/ApplicationFeatures.createTodayWarningNotification.html
+++ b/Javadocs/com/asdoi/gymwen/ApplicationFeatures.createTodayWarningNotification.html
@@ -117,13 +117,13 @@ var activeTableTab = "activeTableTab";
                     <ul class="inheritance">
                         <li>
                             <a href="../../../com/asdoi/gymwen/ApplicationFeatures.downloadSubstitutionplanDocsTask.html"
-                               title="class in com.asdoi.gymwen">com.asdoi.gymwen.ApplicationFeatures.downloadSubstitutionplanDocsTask</a>
+                               title="class in com.asdoi.gymwen">com.asdoi.gymwen.ApplicationFeatures.DownloadSubstitutionplanDocsTask</a>
                         </li>
                         <li>
                             <ul class="inheritance">
                                 <li>
                                     <a href="../../../com/asdoi/gymwen/ApplicationFeatures.createInfoNotification.html"
-                                       title="class in com.asdoi.gymwen">com.asdoi.gymwen.ApplicationFeatures.createInfoNotification</a>
+                                       title="class in com.asdoi.gymwen">com.asdoi.gymwen.ApplicationFeatures.CreateInfoNotification</a>
                                 </li>
                                 <li>
                                     <ul class="inheritance">
@@ -247,7 +247,7 @@ extends <a href="../../../com/asdoi/gymwen/ApplicationFeatures.createInfoNotific
                         </table>
                         <ul class="blockList">
                             <li class="blockList"><a
-                                    name="methods.inherited.from.class.com.asdoi.gymwen.ApplicationFeatures.createInfoNotification">
+                                    name="methods.inherited.from.class.com.asdoi.gymwen.ApplicationFeatures.CreateInfoNotification">
                                 <!--   -->
                             </a>
                                 <h3>Methods inherited from class&nbsp;com.asdoi.gymwen.<a
@@ -260,7 +260,7 @@ extends <a href="../../../com/asdoi/gymwen/ApplicationFeatures.createInfoNotific
                         </ul>
                         <ul class="blockList">
                             <li class="blockList"><a
-                                    name="methods.inherited.from.class.com.asdoi.gymwen.ApplicationFeatures.downloadSubstitutionplanDocsTask">
+                                    name="methods.inherited.from.class.com.asdoi.gymwen.ApplicationFeatures.DownloadSubstitutionplanDocsTask">
                                 <!--   -->
                             </a>
                                 <h3>Methods inherited from class&nbsp;com.asdoi.gymwen.<a
