--- a/Javadocs/com/asdoi/gymwen/teacherlist/Teacherlist.html
+++ b/Javadocs/com/asdoi/gymwen/teacherlist/Teacherlist.html
@@ -104,7 +104,7 @@ var activeTableTab = "activeTableTab";
         <li>java.lang.Object</li>
         <li>
             <ul class="inheritance">
-                <li>com.asdoi.gymwen.teacherlist.Teacherlist</li>
+                <li>com.asdoi.gymwen.teacherlist.TeacherlistFeatures</li>
             </ul>
         </li>
     </ul>
